refactor(agent): remove code not required for sarjy
